updating slides for boulder get involved event.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="slides">
 				<section>
 					<h1>Girl Develop It</h1>
-					<h3>[chapter city]</h3>
+					<h3>Boulder / Denver</h3>
 					<img src="images/circle-logo.png" alt="Girl Develop It" class="no-border" />
 				</section>
 
@@ -155,72 +155,174 @@
 					<h2>Our Impact</h2>
 					<p>Our community of over 29,000 members has led the industry-wide movement to improve diversity in tech since 2010, and today we empower over 1,000 students per month with coding skills and the community support to continue learning.</p>
 				</section>
-				<section data-background="images/detroit-htmlcss.png">
+				<!-- <section data-background="images/detroit-htmlcss.png">
 					<h1>How we're different</h1>
-				</section>
+				</section> -->
 
 				<!-- Local Chapter information -->
 				<section data-background="images/detroit-htmlcss.png">
-					<h1>Who we are in [Chapter Name]</h1>
+					<h1>Who we are in Boulder / Denver</h1>
 				</section>
 				<section>
 					<h2>Who we are</h2>
-					<!--Showcase a success story for your chapter-->
+					<h3>Boulder Co-founders</h3>
+					<div style="width: 42%; float: left; padding: 3%;">
+						<h4 class="blue">Cara Jo Miller</h4>
+						<img src="images/carajo.jpg" style="border-radius: 50%;" alt="Cara Jo" class="no-border" />
+					</div>
+					<div style="width: 42%; float: left; padding: 3%;">
+						<h4 class="blue">Kate Bierbaum</h4>
+						<img src="images/kate.jpg" style="border-radius: 50%;" alt="Kate Bierbaum" class="no-border" />
+					</div>
+				</section>
+				<section>
+					<h2>Who we are</h2>
+					<h3>Denver Co-founders</h3>
+					<div style="width: 42%; float: left; padding: 3%;">
+						<h4 class="blue">Bree Thomas</h4>
+						<img src="images/bree.jpg" style="border-radius: 50%;" alt="Bree Thomas" class="no-border" />
+					</div>
+					<div style="width: 42%; float: left; padding: 3%;">
+						<h4 class="blue">Rachel Warbelow</h4>
+						<img src="images/rachel.png" style="border-radius: 50%;" alt="Rachel Warbelow" class="no-border" />
+					</div>
+				</section>
+				<section data-background="images/detroit-htmlcss.png">
+					<h1>What have we been up to?</h1>
+				</section>
+				<section>
+					<h2>Founded in June 2013</h2>
+					<p>We've been around for 1 year, 6 months and 18 days.</p>
+					<p>In that time we've done some great things...</p>
+				</section>
+				<section>
+					<h2>Grown to over 870 members</h2>
+					<p>We've taught nearly 480 members a new skill!</p>
+				</section>
+				<section>
+					<h2>Taught nearly 30 classes</h2>
+					<p>HTML/CSS, Javascript, Python, Ruby, GitHub, Bootstrap, and other topics.</p> 
+				</section>
+				<section>
+					<h2>Hosted Nearly 25 free social events</h2>
+					<p>Code &amp; Coffee, Code &amp; Cocktails, Study groups, and fantastic parties.</p>
+				</section>
+				<section>
+					<h2>Expanded to Denver</h2>
+					<p>In September we expanded to Denver and have started offering classes &amp; workshops.</p> 
+				</section>
+				<section data-background="images/boulder-scala.png">
+					<h1>What's next?</h1>
+				</section>
+				<section>
+					<h2>Offer a broader range of Classes &amp; Workshops</h2>
+				</section>
+				<section>
+					<h2>More community events</h2>
+					<p>Happy Hour, Code &amp; Coffee, Hack nights, and other social events.</p>
+				</section>
+				<section>
+					<h2>Women in Tech panel series</h2>
+					<p>Bringing together some of the most amazing Women in the Boulder/Denver tech scene to inspire our members.</p>
+				</section>
+				<section>
+					<h2>New Languages</h2>
+					<p>Python, Ruby, Android, iOs, Java, UX, and beyond!</p>
+				</section>
+				<section>
+					<h2>New Workshops</h2>
+					<p>Sketch 3, Photohop, Agile/Scrum, Behavioral Science, WordPress, FTP &amp; GitHub Pages, Bootstrap, LESS, SASS, Sublime, Command Line, Docker and more!</p>
+				</section>
+				<section data-background="images/philly-ux.png">
+					<h1>How you can help</h1>
+					<h2 style="color: white;">Because that's why you're here right?</h2>
+				</section>
+				<section>
+					<h2>Let's clear something up first</h2>
+				</section>
+				<section>
+					<h2>You don't have to be a woman to help</h2>
+					<p>Yes guys, you can help out! We'd love it!</p>
+				</section>
+				<section>
+					<h2>You don't have to be a rockstar developer</h2>
+					<p>Just teaching someone a skill will help improve your own.</p>
+				</section>
+				<section>
+					<h2>You don't have to jump right in</h2>
+					<p>You can first help as a TA, then move up to teaching.</p>
+					<p>You can help out in other ways</p>
+				</section>
+				<section>
+					<h2>Become an instructor</h2>
+					<h3>Co-teach or alone</h3>
+					<p>You don't have to know it all, you can teach with a friend who's got your back!</p>
+				</section>
+				<section>
+					<h2>Teach an existing topic or a new one!</h2>
+					<p>If you have something you want to teach, there's probably people who want to learn it.</p>
+					<p>Review our existing curriculum or create your own.</p>
+				</section>
+				<section>
+					<h2>Become a Teacher's assistant</h2>
+					<h3>The instructor can't do it all!</h3>
+					<p>Assist instructors with student questions and provide additional insight.</p>
+					<p>Ensure that every student get's their question answered.</p>
+				</section>
+				<section>
+					<h2>Organizational Needs</h2>
+					<h3>A lot goes into logistics!</h3>
+					<p>Help out with marketing, social media, class scheduling, work with sponsors, answer student questions, &amp; more.</p>
+				</section>
+				<section>
+					<h2>Become a Sponsor</h2>
+					<h3>Donate Space</h3>
+					<p>Show off your awesome workspace by hosting a workshop, happy hour, or class.</p>
+				</section>
+				<section>
+					<h2>Donate Time</h2>
+					<p>Have a crew of developers? Have your team TA or even teach a class for GDI.</p>
+				</section>
+				<section>
+					<h2>Donate Resources</h2>
+					<p>Food, Drinks, Supplies, &amp; swag all help make the learning experience better.</p>
 				</section>
 				<section data-background="images/philly-ux.png">
 					<h1>Our upcoming events</h1>
 				</section>
 				<section>
-					<h2>Events happening in [chapter name]</h2>
-					<div style="width: 45%; float: left;">
-						<h4 class="blue">[Class Name]</h4>
-						<p><strong>[Class date &amp; time]</strong></p>
-						<p>[location]</p>
-						<p><a href="">[event link]</a></p>
-					</div>
-					<div style="width: 45%; float: left;">
-						<h4 class="blue">[Class Name]</h4>
-						<p><strong>[Class date &amp; time]</strong></p>
-						<p>[location]</p>
-						<p><a href="">[event link]</a></p>
-					</div>
-
-				</section>
-				<section data-background="images/philly-typography.png">
-					<h1>How you can get involved</h1>
+					<h2>Upcoming Events</h2>
+					<h4 class="blue">Get Involved with GDI Denver</h4>
+					<p><strong>January 15th</strong></p>
+					<p>ModeSet</p>
+					<br/>
+					<h4 class="blue">Intermediate HTML/CSS - Boulder</h4>
+					<p><strong>January 17th & 18th</strong></p>
+					<p>SendGrid Boulder</p>
 				</section>
 				<section>
-					<h2>Become a Teacher or a Teaching Assistant</h2>
-					<p>Our organization doesn't work without people willing to teach or assist in classes. No prior teaching experience needed &emdash; just a desire to teach! We help with all the rest, including preparing curriculum, materials and organizing your first class.</p>
+					<h2>Upcoming Events</h2>
+					<h4 class="blue">Building your first iOS App Using Swift - Denver</h4>
+					<p><strong>January 24th</strong></p>
+					<p>Turing School</p>
+					<br/>
+					<h4 class="blue">Hosting your website with GitHub Pages  - Boulder</h4>
+					<p><strong>January 22nd</strong></p>
+					<p>Zayo</p>
 				</section>
-				<section>
-					<h2>Host or Sponsor events</h2>
-					<p>Receiving help from the community enables us to support more students and teachers. Some ways to help include volunteer­ing your space for workshops, sponsoring snacks for events and donating to our scholarship fund.</p>
-				</section>
-				<section>
-					<h2>Host or Sponsor events</h2>
-					<p>In return, we feature your name on the official Meetup page and in our event promotional materials. Email us for more information about sponsorship opportunities.</p>
-				</section>
-				<section>
-					<h2>Community Outreach</h2>
-					<p>Promote Girl Develop It's mission, raise awareness, recruit instructors and TAs and promote fundraising. Manage our social media accounts, represent GDI at local events and submit events to online calendars.</p>
-				</section>
-				<section>
-					<h2>Become an Event Organizer</h2>
-					<p>Organize special events such as Code &amp; Coffee, hackathons, free workshops, fundraisers and more. The possibilities are endless!</p>
-				</section>
+				
 				<section>
 					<h2>Other ideas?</h2>
-					<p>We always open to ideas for classes, programming and overall improvements for this chapter. Please feel free to speak to one of our chapter leaders, or email us at <a href="[chapter]@girldevelopit.com">[chapter]@girldevelopit.com</a>.</p>
+					<p>We always open to ideas for classes, programming and overall improvements for this chapter. Please feel free to speak to one of our chapter leaders, or email us at <a href="boulder@girldevelopit.com">boulder@girldevelopit.com</a>.</p>
 				</section>
 				<section>
 					<h2>Get in Touch</h2>
-					<a href="mailto:[chapter]@girldevelopit.com"><img src="images/icon-email.png" alt="email us" title="[chapter]@girldevelopit.com" class="no-border"/></a>
-					<a href="http://twitter.com/[twitter]"><img src="images/icon-twitter.png" alt="Twitter" title="@[twitter]" class="no-border"/></a>
-					<a href="http://facebook.com"><img src="images/icon-facebook.png" alt="Facebook" title="Facebook" class="no-border"/></a>
-					<a href="http://linkedin.com"><img src="images/icon-linkedin.png" alt="LinkedIn" title="LinkedIn" class="no-border"/></a>
-					<a href="http://google.com"><img src="images/icon-google.png" alt="Google+" title="Google+" class="no-border"/></a>
-					<a href="http://github.com"><img src="images/icon-github.png" alt="GitHub" title="GitHub" class="no-border"/></a>
+					<a href="mailto:boulder@girldevelopit.com"><img src="images/icon-email.png" alt="email us" title="[chapter]@girldevelopit.com" class="no-border"/></a>
+					<a href="http://twitter.com/gdiboulder"><img src="images/icon-twitter.png" alt="Twitter" title="@[twitter]" class="no-border"/></a>
+					<a href="http://facebook.com/gdiboulder"><img src="images/icon-facebook.png" alt="Facebook" title="Facebook" class="no-border"/></a>
+					<!-- <a href="http://linkedin.com"><img src="images/icon-linkedin.png" alt="LinkedIn" title="LinkedIn" class="no-border"/></a> -->
+					<!-- <a href="http://google.com"><img src="images/icon-google.png" alt="Google+" title="Google+" class="no-border"/></a> -->
+					<a href="http://github.com/gdiboulder"><img src="images/icon-github.png" alt="GitHub" title="GitHub" class="no-border"/></a>
 				</section>
 			</div>
 			<footer>
