Fixing a few typos + a few word changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 				<section>
 					<h2>What We Do</h2>
-					<p>"Girl, Develop It!"" began as a call to action for women, by women who were tired of the low representation of women in tech, and who want to make a difference today.</p>
+					<p>"Girl, Develop It!" began as a call to action for women, by women who were tired of the low representation of women in tech, and who want to make a difference today.</p>
 				</section>
 					
 				<section>
@@ -88,7 +88,7 @@
 				</section>
 				<section>
 					<h2 class="blue">Our Vision</h2>
-					<p>Our vision is to create a network of empowered women who feel confident in their abilities to code and build beautiful web and mobile applications. By teaching women around the world from diverse backgrounds to learn software development, we can help women improve their careers and confidence in their everyday lives</p>
+					<p>Our vision is to create a network of empowered women who feel confident in their abilities to code and build beautiful web and mobile applications. By teaching women around the world from diverse backgrounds to learn software development, we can help women improve their careers and confidence in their everyday lives.</p>
 				</section>
 				<section data-background="images/detroit-htmlcss.png">
 					<h1>What We Do:</h1>
@@ -226,7 +226,7 @@
 					<p>Bringing together some of the most amazing Women in the Boulder/Denver tech scene to inspire our members.</p>
 				</section>
 				<section>
-					<h2>New Languages</h2>
+					<h2>New Classes</h2>
 					<p>Python, Ruby, Android, iOs, Java, UX, and beyond!</p>
 				</section>
 				<section>
