Adding section about teacher training

--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
 					<p>You can help out in other ways</p>
 				</section>
 				<section>
+					<h2>Become a Teacher's assistant</h2>
+					<h3>The instructor can't do it all!</h3>
+					<p>Assist instructors with student questions and provide additional insight.</p>
+					<p>Ensure that every student gets their question answered.</p>
+				</section>
+				<section>
 					<h2>Become an instructor</h2>
 					<h3>Co-teach or alone</h3>
 					<p>You don't have to know it all, you can teach with a friend who's got your back!</p>
@@ -264,10 +270,8 @@
 					<p>Review our existing curriculum or create your own.</p>
 				</section>
 				<section>
-					<h2>Become a Teacher's assistant</h2>
-					<h3>The instructor can't do it all!</h3>
-					<p>Assist instructors with student questions and provide additional insight.</p>
-					<p>Ensure that every student get's their question answered.</p>
+					<h2>Teacher training</h2>
+					<p>Coming this year! GDI will offer teacher training so you get the skills you need to be a successful instructor</p>
 				</section>
 				<section>
 					<h2>Organizational Needs</h2>
