Adding link to the survey.

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
 				<section>
 					<h2>Other Ideas?</h2>
 					<p>We always open to ideas for classes, programming and overall improvements for this chapter. Please feel free to speak to one of our chapter leaders, or email us at <a href="boulder@girldevelopit.com">boulder@girldevelopit.com</a>.</p>
+					<p>Fill out the volunteer interest survey at <a href="http://gdiboulder.com/support">gdiboulder.com/support</a></p>
 				</section>
 				<section>
 					<h2>Get in Touch</h2>
