Adding mention of Fort Collins.</

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <p>Grown to over 870 members</p>
           <p>Offered over 25 different types of classes</p>
           <p>Built community through free social events</p>
-          <p>Expanded to Denver</p>
+          <p>Expanded to Denver &amp; Fort Collins</p>
 				</section>
 				<section data-background="images/boulder-scala.png">
 					<h1>The Future</h1>
